Lightbox aktiviert z-index und gallery fix

--- a/dev/klickdummy/css/awesomebox.css
+++ b/dev/klickdummy/css/awesomebox.css
@@ -5,6 +5,7 @@
 			box-sizing: border-box; 
 }
 .awesomebox{
+    z-index:10000;
     display:none;
     width:100%;
     height:100%;
